--- a/requirements.txt
+++ b/requirements.txt
@@ -14,6 +14,7 @@ djangocms-snippet==2.1.0
 djangocms-style==2.1.0
 djangocms-text-ckeditor==3.7.0
 djangocms-video==2.1.1
+gunicorn==19.9.0
 ipython==7.4.0
 psycopg2==2.7.7
 psycopg2-binary==2.7.7
