--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
 Django==2.1.8
+django-cloudinary-storage==0.2.3
 django-cms==3.6.0
 django-extensions==2.1.6
 django-filer==1.4.4
@@ -16,5 +17,6 @@ djangocms-text-ckeditor==3.7.0
 djangocms-video==2.1.1
 gunicorn==19.9.0
 ipython==7.4.0
-psycopg2==2.7.7
+Pillow==6.0.0
 psycopg2-binary==2.7.7
+psycopg2==2.7.7
