--- a/Pipfile
+++ b/Pipfile
@@ -4,25 +4,25 @@ verify_ssl = true
 name = "pypi"
 
 [packages]
-django = "==2.1.15"
+django = "==2.2.28"
 django-cloudinary-storage = "==0.2.3"
-django-cms = "==3.6.0"
+django-cms = "*"
 django-extensions = "==2.1.6"
-django-filer = "==1.4.4"
+django-filer = "*"
 django-heroku = "==0.3.1"
 django-taggit = "==1.1.0"
 django-taggit-autosuggest = "==0.3.7"
-djangocms-admin-style = "==1.4.0"
-djangocms-attributes-field = "==1.1.0"
-djangocms-column = "==1.9.0"
-djangocms-file = "==2.2.0"
-djangocms-googlemap = "==1.2.0"
-djangocms-link = "==2.4.0"
-djangocms-picture = "==2.1.3"
-djangocms-snippet = "==2.1.0"
-djangocms-style = "==2.1.0"
-djangocms-text-ckeditor = "==3.7.0"
-djangocms-video = "==2.1.1"
+djangocms-admin-style = "*"
+djangocms-attributes-field = "*"
+djangocms-column = "*"
+djangocms-file = "*"
+djangocms-googlemap = "*"
+djangocms-link = "*"
+djangocms-picture = "*"
+djangocms-snippet = "*"
+djangocms-style = "*"
+djangocms-text-ckeditor = "*"
+djangocms-video = "*"
 gunicorn = "==19.9.0"
 ipython = "==7.4.0"
 pillow = "==6.2.2"
@@ -31,4 +31,4 @@ psycopg2 = "==2.9.9"
 [dev-packages]
 
 [requires]
-python_version = "3.12"
+python_version = "3.9"
