--- a/Pipfile
+++ b/Pipfile
@@ -10,6 +10,7 @@ django-cms = "*"
 django-extensions = "==2.1.6"
 django-filer = "*"
 django-heroku = "==0.3.1"
+django-mptt = "*"
 django-taggit = "==1.1.0"
 django-taggit-autosuggest = "==0.3.7"
 djangocms-admin-style = "*"
