Pin djangocms-link to 2.1.0 for Django 2.2 compatibility

--- a/Pipfile
+++ b/Pipfile
@@ -18,7 +18,7 @@ djangocms-attributes-field = "*"
 djangocms-column = "*"
 djangocms-file = "*"
 djangocms-googlemap = "*"
-djangocms-link = "*"
+djangocms-link = "==2.1.0"
 djangocms-picture = "*"
 djangocms-snippet = "*"
 djangocms-style = "*"
