Add local settings, upgrade Django and DjangoCMS to v5

--- a/Pipfile
+++ b/Pipfile
@@ -4,30 +4,29 @@ verify_ssl = true
 name = "pypi"
 
 [packages]
-django = "==3.2.25"
+django = "==5.2.3"
 django-cloudinary-storage = "==0.3.0"
-django-cms = "*"
-django-extensions = "==2.1.6"
+django-cms = "==5.0.1"
+django-extensions = "==4.1"
 django-filer = "*"
 django-heroku = "==0.3.1"
 django-mptt = "*"
-django-taggit = "==1.1.0"
-django-taggit-autosuggest = "==0.3.7"
+django-taggit = "==6.1.0"
+django-taggit-autosuggest = "==0.4.2"
 djangocms-admin-style = "*"
 djangocms-attributes-field = "*"
 djangocms-column = "*"
 djangocms-file = "*"
 djangocms-googlemap = "*"
-djangocms-link = "==2.6.1"
+djangocms-link = "==5.0.1"
 djangocms-picture = "*"
-djangocms-snippet = "*"
 djangocms-style = "*"
 djangocms-text-ckeditor = "*"
 djangocms-video = "*"
-gunicorn = "==19.9.0"
-ipython = "==7.4.0"
-pillow = "==6.2.2"
-psycopg2 = "==2.9.9"
+gunicorn = "==23.0.0"
+ipython = "==9.3.0"
+pillow = "==11.2.1"
+psycopg2 = "==2.9.10"
 
 [dev-packages]
 
