Convert static_placeholders to static_aliases

--- a/Pipfile
+++ b/Pipfile
@@ -14,6 +14,7 @@ django-mptt = "*"
 django-taggit = "==6.1.0"
 django-taggit-autosuggest = "==0.4.2"
 djangocms-admin-style = "*"
+djangocms-alias = "*"
 djangocms-attributes-field = "*"
 djangocms-column = "*"
 djangocms-file = "*"
